[package]
name       = "hikari"
version    = "0.1.0"
edition    = "2021"
authors    = ["Denys Mentiei <endden@gmail.com>"]
license    = "MIT"
repository = "https://github.com/den-mentiei/hikari"
readme     = "README.md"

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic         = "abort"
lto           = "fat"
codegen-units = 1